[#83702] Removed accessibility json endpoint. If you want this functionality back you can check tag before-api-v2-accessibility-json-removal. At the moment we see no use case for it and therefor it was removed. We can always add it back if there turns out to be a use case.
Added effectivelyAccessibly argument on the api
